[package]
name = "bridge-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.1"
tower-lsp = "0.20.0"

[dependencies.tokio]
version = "1.36.0"
features = ["io-std", "macros", "rt-multi-thread"]
